# ldzeug2

./: .gitignore  README.md  comb_pipe.py  comb_pipe_script.py  export_onnx.py  generic_train_loop.py  launchspyder.txt  noautoload.conf  play.py  pyproject.toml  train_color_cnn.py  train_yc_cnn.py  train_yc_cnn_experimental.py  train_yc_cnn_span.py  vfmtest.py
ldzeug2/: __init__.py  colorcnn_trch.py  colordecoder.py  colorencoder.py  comb_consts.py  compact.py  deformations.py  experimentalyc.py  lddecode.py  ntsc_utils.py  span.py  stackable.py  stdinsrc.py  utils.py  vsnn.py
pcmaudio/: compile.sh  compile_flags.txt  pcmaudio.cpp
